crates/squawk_parser/src/snapshots/parser__test__alter_subscription_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/alter_subscription.sql
---
SOURCE_FILE
  COMMENT "-- connection"
  WHITESPACE "\n"
  ALTER_SUBSCRIPTION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SUBSCRIPTION_KW "subscription"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
    WHITESPACE " "
    CONNECTION_KW "connection"
    WHITESPACE " "
    LITERAL
      STRING "'host=localhost port=5432'"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_publication"
  WHITESPACE "\n"
  ALTER_SUBSCRIPTION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SUBSCRIPTION_KW "subscription"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    PUBLICATION_KW "publication"
    WHITESPACE " "
    NAME
      IDENT "p"
  SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_SUBSCRIPTION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SUBSCRIPTION_KW "subscription"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    PUBLICATION_KW "publication"
    WHITESPACE " "
    NAME
      IDENT "p"
    COMMA ","
    WHITESPACE " "
    NAME
      IDENT "q"
    COMMA ","
    WHITESPACE " "
    NAME
      IDENT "r"
    WHITESPACE " "
    WITH_KW "with"
    WHITESPACE " "
    L_PAREN "("
    NAME
      IDENT "a"
    COMMA ","
    WHITESPACE " "
    NAME
      IDENT "b"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      TRUE_KW "true"
    R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- add_publication"
  WHITESPACE "\n"
  ALTER_SUBSCRIPTION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SUBSCRIPTION_KW "subscription"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
    WHITESPACE " "
    ADD_KW "add"
    WHITESPACE " "
    PUBLICATION_KW "publication"
    WHITESPACE " "
    NAME
      IDENT "p"
  SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_SUBSCRIPTION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SUBSCRIPTION_KW "subscription"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
    WHITESPACE " "
    ADD_KW "add"
    WHITESPACE " "
    PUBLICATION_KW "publication"
    WHITESPACE " "
    NAME
      IDENT "a"
    COMMA ","
    WHITESPACE " "
    NAME
      IDENT "b"
    COMMA ","
    WHITESPACE " "
    NAME
      IDENT "c"
    WHITESPACE " "
    WITH_KW "with"
    WHITESPACE " "
    L_PAREN "("
    NAME
      IDENT "a"
    COMMA ","
    WHITESPACE " "
    NAME
      IDENT "b"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      INT_NUMBER "1"
    R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- drop_publication"
  WHITESPACE "\n"
  ALTER_SUBSCRIPTION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SUBSCRIPTION_KW "subscription"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
    WHITESPACE " "
    DROP_KW "drop"
    WHITESPACE " "
    PUBLICATION_KW "publication"
    WHITESPACE " "
    NAME_REF
      IDENT "p"
  SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_SUBSCRIPTION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SUBSCRIPTION_KW "subscription"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
    WHITESPACE " "
    DROP_KW "drop"
    WHITESPACE " "
    PUBLICATION_KW "publication"
    WHITESPACE " "
    NAME_REF
      IDENT "a"
    COMMA ","
    WHITESPACE " "
    NAME_REF
      IDENT "b"
    COMMA ","
    WHITESPACE " "
    NAME_REF
      IDENT "c"
    WHITESPACE " "
    WITH_KW "with"
    WHITESPACE " "
    L_PAREN "("
    NAME
      IDENT "a"
    COMMA ","
    WHITESPACE " "
    NAME
      IDENT "b"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      INT_NUMBER "1"
    R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- refresh"
  WHITESPACE "\n"
  ALTER_SUBSCRIPTION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SUBSCRIPTION_KW "subscription"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
    WHITESPACE " "
    REFRESH_KW "refresh"
    WHITESPACE " "
    PUBLICATION_KW "publication"
    WHITESPACE " "
    WITH_KW "with"
    WHITESPACE " "
    L_PAREN "("
    NAME
      IDENT "copy_data"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      FALSE_KW "false"
    R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- enable"
  WHITESPACE "\n"
  ALTER_SUBSCRIPTION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SUBSCRIPTION_KW "subscription"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
    WHITESPACE " "
    ENABLE_KW "enable"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- disable"
  WHITESPACE "\n"
  ALTER_SUBSCRIPTION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SUBSCRIPTION_KW "subscription"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
    WHITESPACE " "
    DISABLE_KW "disable"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_parameters"
  WHITESPACE "\n"
  ALTER_SUBSCRIPTION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SUBSCRIPTION_KW "subscription"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    L_PAREN "("
    NAME
      IDENT "slot_name"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      STRING "'new_slot'"
    COMMA ","
    WHITESPACE " "
    NAME
      IDENT "synchronous_commit"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      STRING "'off'"
    R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- skip"
  WHITESPACE "\n"
  ALTER_SUBSCRIPTION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SUBSCRIPTION_KW "subscription"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
    WHITESPACE " "
    SKIP_KW "skip"
    WHITESPACE " "
    L_PAREN "("
    NAME
      IDENT "lsn"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      STRING "'0/12345678'"
    R_PAREN ")"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- owner"
  WHITESPACE "\n"
  ALTER_SUBSCRIPTION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SUBSCRIPTION_KW "subscription"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
    WHITESPACE " "
    OWNER_KW "owner"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    IDENT "u"
  SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_SUBSCRIPTION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SUBSCRIPTION_KW "subscription"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
    WHITESPACE " "
    OWNER_KW "owner"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    CURRENT_USER_KW "current_user"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- rename"
  WHITESPACE "\n"
  ALTER_SUBSCRIPTION_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SUBSCRIPTION_KW "subscription"
    WHITESPACE " "
    NAME_REF
      IDENT "s"
    WHITESPACE " "
    RENAME_KW "rename"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    NAME
      IDENT "t"
  SEMICOLON ";"
  WHITESPACE "\n\n"
