crates/squawk_parser/src/snapshots/parser__test__alter_system_ok.snap
---
source: crates/parser/src/test.rs
input_file: crates/parser/test_data/ok/alter_system.sql
---
SOURCE_FILE
  COMMENT "-- set_to"
  WHITESPACE "\n"
  ALTER_SYSTEM_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SYSTEM_KW "system"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "p"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    LITERAL
      STRING "'v'"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_equals"
  WHITESPACE "\n"
  ALTER_SYSTEM_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SYSTEM_KW "system"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "p"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      STRING "'v'"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- schema"
  WHITESPACE "\n"
  ALTER_SYSTEM_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SYSTEM_KW "system"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    PATH
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "foo"
      DOT "."
      PATH_SEGMENT
        NAME_REF
          IDENT "p"
    WHITESPACE " "
    EQ "="
    WHITESPACE " "
    LITERAL
      STRING "'v'"
  SEMICOLON ";"
  WHITESPACE "\n"
  ALTER_SYSTEM_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SYSTEM_KW "system"
    WHITESPACE " "
    RESET_KW "reset"
    WHITESPACE " "
    PATH
      PATH
        PATH_SEGMENT
          NAME_REF
            IDENT "foo"
      DOT "."
      PATH_SEGMENT
        NAME_REF
          IDENT "p"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_multiple"
  WHITESPACE "\n"
  ALTER_SYSTEM_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SYSTEM_KW "system"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "p"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    LITERAL
      STRING "'v1'"
    COMMA ","
    WHITESPACE " "
    LITERAL
      STRING "'v2'"
    COMMA ","
    WHITESPACE " "
    LITERAL
      STRING "'v3'"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- set_default"
  WHITESPACE "\n"
  ALTER_SYSTEM_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SYSTEM_KW "system"
    WHITESPACE " "
    SET_KW "set"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "p"
    WHITESPACE " "
    TO_KW "to"
    WHITESPACE " "
    DEFAULT_KW "default"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- reset_param"
  WHITESPACE "\n"
  ALTER_SYSTEM_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SYSTEM_KW "system"
    WHITESPACE " "
    RESET_KW "reset"
    WHITESPACE " "
    PATH
      PATH_SEGMENT
        NAME_REF
          IDENT "p"
  SEMICOLON ";"
  WHITESPACE "\n\n"
  COMMENT "-- reset_all"
  WHITESPACE "\n"
  ALTER_SYSTEM_STMT
    ALTER_KW "alter"
    WHITESPACE " "
    SYSTEM_KW "system"
    WHITESPACE " "
    RESET_KW "reset"
    WHITESPACE " "
    ALL_KW "all"
  SEMICOLON ";"
  WHITESPACE "\n\n"
